# raskol

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deploy.sh  fly.toml
migrations/: 0_data.sql
src/: auth.rs  chat.rs  conf.rs  data.rs  docs.rs  jwt.rs  lib.rs  main.rs  server.rs  tracing.rs  types.rs
src/server/: tests.rs
sys/etc/systemd/system/: raskol.service
tests/: end_to_end.rs
