[package]
name = "raskol"
version = "0.3.3"
description = "Share 1 API key with N group members without revealing it."
authors = ["Siraaj Khandkar <siraaj@khandkar.net>"]
keywords = ["photo", "organizer", "exif"]
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
cuid2 = "0.1.3"
dashmap = "6.1.0"
human-panic = "2.0.2"
jsonwebtoken = "9.2.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full", "tracing"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
