[package]
name = "raskol"
version = "0.9.0"
description = "Share 1 API key with N group members without revealing it."
authors = ["Siraaj Khandkar <siraaj@khandkar.net>"]
keywords = ["photo", "organizer", "exif"]
categories = ["command-line-utilities"]
license = "BSD-3-Clause"
readme = "README.md"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
axum = "0.7.9"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["derive"] }
cuid2 = "0.1.3"
human-panic = "2.0.2"
jsonwebtoken = "9.2.0"
rustls = "0.23.20"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
sqlx = { version = "0.8.2", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.42.0", features = ["full", "tracing"] }
toml = "0.8.19"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

###############################################################################
# binary size optimizations
# https://github.com/johnthagen/min-sized-rust
###############################################################################
[profile.release]
codegen-units = 1  # Disable parallelization, allowing maximum size reduction.
lto = true         # Enable Link Time Optimizations.
# panic = "abort"  # Disable stack unwind.
# strip = true     # Strip symbols.
# opt-level = "z"  # Optimize for size.
